fixed mouse pointer issue when hovered on whitespace area

--- a/src/components/projectCard/projectCard.scss
+++ b/src/components/projectCard/projectCard.scss
@@ -3,6 +3,9 @@
 div.card {
   border-radius: 8px;
   &.work-card {
+    @include media-breakpoint-up(md) {
+      width: calc(100% + 4.5rem) !important;
+    }
     div.card-body {
       span.badge {
         @include badge_style();
@@ -80,6 +83,7 @@ div.card {
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24) !important;
  }
 }
+
 
 
 
